work in progress

--- a/Slot.html
+++ b/Slot.html
@@ -58,13 +58,13 @@
     </style>
 </head>
 <body>
-    <h1>Big Bass Slot Machine</h1>
+    <h1> Jackpot BAGaMONEY Slot Machine</h1>
     <div class="slot-container" id="slot-container"></div>
     <button class="spin-btn" id="spin-btn">Spin</button>
     <div class="win-message" id="win-message"></div>
 
     <script>
-        const symbols = ["🎣", "🐟", "💰", "🦞", "🌊", "🎣", "🐠", "🐡"];
+        const symbols = ["💎", "🪨", "🏆", "🥈", "💲", "💰"];
         const reelsCount = 5;
         const rowsCount = 3;
         const slotContainer = document.getElementById("slot-container");
